New feature: Support for the Xiaoyuzhou platform

--- a/trans.ipynb
+++ b/trans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "30ec55d3-58a3-4440-8f36-c74da2e6407e",
    "metadata": {},
    "outputs": [],
@@ -25,9 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_audio_url_from_podcast(url):\n",
+    "#ApplePodcast\n",
+    "def extract_audio_url_from_apple(url):\n",
     "    \"\"\"\n",
-    "    Extract audio URL and podcast title from an Apple Podcast page.\n",
+    "    Extract audio URL and soup from an Apple Podcast page.\n",
     "    \"\"\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code != 200:\n",
@@ -35,24 +36,53 @@
     "\n",
     "    # 自动检测编码\n",
     "    detected_encoding = chardet.detect(response.content)['encoding']\n",
-    "    print(f\"Detected encoding: {detected_encoding}\")\n",
     "    if detected_encoding:\n",
     "        response.encoding = detected_encoding\n",
     "    else:\n",
-    "        response.encoding = 'utf-8'  # 默认使用 utf-8 编码\n",
-    "\n",
-    "    # 打印前 500 个字符的 HTML 内容进行验证\n",
-    "    #print(\"Fetched HTML content preview:\")\n",
-    "    #print(response.text[:5000])  # 打印部分 HTML 内容\n",
+    "        response.encoding = 'utf-8'\n",
     "\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "    # Find audio URL (MP3 or M4A)\n",
+    "    # 查找音频链接 (MP3 或 M4A)\n",
     "    audio_urls = re.findall(r'https://[^\\s^\"]+(?:\\.mp3|\\.m4a)', response.text)\n",
     "    if not audio_urls:\n",
     "        raise Exception(\"No audio URLs found on the page.\")\n",
-    "    return audio_urls[-1], soup  # Return the last found URL and soup\n",
     "\n",
+    "    return audio_urls[-1], soup  # 返回音频链接和 HTML 结构\n",
+    "\n",
+    "#小宇宙\n",
+    "def extract_audio_url_from_xiaoyuzhou(url):\n",
+    "    \"\"\"\n",
+    "    Extract audio URL and soup from a Xiaoyuzhou FM page.\n",
+    "    \"\"\"\n",
+    "    headers = {\n",
+    "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
+    "    }\n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    response.raise_for_status()\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "    # 查找音频链接 (og:audio)\n",
+    "    audio_meta = soup.find('meta', property='og:audio')\n",
+    "    if audio_meta and audio_meta.get('content'):\n",
+    "        return audio_meta['content'], soup  # 返回音频链接和 HTML 结构\n",
+    "    else:\n",
+    "        raise Exception(\"No audio URL found on the Xiaoyuzhou page.\")\n",
+    "\n",
+    "\n",
+    "#判断函数\n",
+    "def extract_audio_url_by_platform(url):\n",
+    "    \"\"\"\n",
+    "    Determine platform and extract audio URL and soup.\n",
+    "    \"\"\"\n",
+    "    if \"apple.com\" in url:\n",
+    "        print(\"检测到 Apple Podcast 链接，开始提取...\")\n",
+    "        return extract_audio_url_from_apple(url)\n",
+    "    elif \"xiaoyuzhoufm.com\" in url:\n",
+    "        print(\"检测到小宇宙链接，开始提取...\")\n",
+    "        return extract_audio_url_from_xiaoyuzhou(url)\n",
+    "    else:\n",
+    "        raise Exception(\"无法识别的链接平台，请提供 Apple Podcast 或小宇宙平台的链接。\")\n",
     "\n",
     "def get_podcast_title(soup):\n",
     "    \"\"\"\n",
@@ -120,12 +150,12 @@
     "\n",
     "\n",
     "\n",
-    "# 交互式部分：提示用户输入 Apple Podcast 链接\n",
-    "podcast_url = input(\"请输入 Apple Podcast 的链接: \")\n",
+    "# 交互式部分：提示用户输入链接\n",
+    "podcast_url = input(\"请输入 Apple Podcast/小宇宙 链接: \")\n",
     "\n",
     "try:\n",
     "    # 1. 提取音频 URL 和 HTML 内容\n",
-    "    audio_url, soup = get_audio_url_from_podcast(podcast_url)\n",
+    "    audio_url, soup = extract_audio_url_by_platform(podcast_url)\n",
     "    print(f\"提取的音频 URL: {audio_url}\")\n",
     "\n",
     "    # 2. 提取标题\n",
@@ -154,52 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da549e3e-f169-44b4-abc4-ff00d6fd85a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "8d2d39ee-f025-448a-8d8a-c3b793ab7cd3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Whisper model: large-v3...\n",
-      "Model large-v3 loaded successfully.\n",
-      "Transcribing audio: downloads/2月份月度对话.wav...\n",
-      "Releasing GPU memory...\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 68\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m# 2. 转录音频\u001b[39;00m\n\u001b[0;32m---> 68\u001b[0m transcription_result \u001b[38;5;241m=\u001b[39m \u001b[43mtranscribe_audio_v3\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwav_file_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;66;03m# 3. 保存转录结果为 SRT 文件\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[4], line 19\u001b[0m, in \u001b[0;36mtranscribe_audio_v3\u001b[0;34m(model, audio_path, task, language, verbose)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTranscribing audio: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maudio_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranscribe\u001b[49m\u001b[43m(\u001b[49m\u001b[43maudio_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlanguage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlanguage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTranscription completed.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/whisper/transcribe.py:295\u001b[0m, in \u001b[0;36mtranscribe\u001b[0;34m(model, audio, verbose, temperature, compression_ratio_threshold, logprob_threshold, no_speech_threshold, condition_on_previous_text, initial_prompt, carry_initial_prompt, word_timestamps, prepend_punctuations, append_punctuations, clip_timestamps, hallucination_silence_threshold, **decode_options)\u001b[0m\n\u001b[1;32m    293\u001b[0m     decode_options[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprompt\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m all_tokens[prompt_reset_since:]\n\u001b[0;32m--> 295\u001b[0m result: DecodingResult \u001b[38;5;241m=\u001b[39m \u001b[43mdecode_with_fallback\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmel_segment\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    296\u001b[0m tokens \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(result\u001b[38;5;241m.\u001b[39mtokens)\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/whisper/transcribe.py:201\u001b[0m, in \u001b[0;36mtranscribe.<locals>.decode_with_fallback\u001b[0;34m(segment)\u001b[0m\n\u001b[1;32m    200\u001b[0m options \u001b[38;5;241m=\u001b[39m DecodingOptions(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs, temperature\u001b[38;5;241m=\u001b[39mt)\n\u001b[0;32m--> 201\u001b[0m decode_result \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43msegment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    203\u001b[0m needs_fallback \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/whisper/decoding.py:824\u001b[0m, in \u001b[0;36mdecode\u001b[0;34m(model, mel, options, **kwargs)\u001b[0m\n\u001b[1;32m    822\u001b[0m     options \u001b[38;5;241m=\u001b[39m replace(options, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 824\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mDecodingTask\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    826\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m single \u001b[38;5;28;01melse\u001b[39;00m result\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/whisper/decoding.py:737\u001b[0m, in \u001b[0;36mDecodingTask.run\u001b[0;34m(self, mel)\u001b[0m\n\u001b[1;32m    736\u001b[0m \u001b[38;5;66;03m# call the main sampling loop\u001b[39;00m\n\u001b[0;32m--> 737\u001b[0m tokens, sum_logprobs, no_speech_probs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_main_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43maudio_features\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    739\u001b[0m \u001b[38;5;66;03m# reshape the tensors to have (n_audio, n_group) as the first two dimensions\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/whisper/decoding.py:700\u001b[0m, in \u001b[0;36mDecodingTask._main_loop\u001b[0;34m(self, audio_features, tokens)\u001b[0m\n\u001b[1;32m    699\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m logit_filter \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogit_filters:\n\u001b[0;32m--> 700\u001b[0m     \u001b[43mlogit_filter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    702\u001b[0m \u001b[38;5;66;03m# expand the tokens tensor with the selected next tokens\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 82\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReleasing GPU memory...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m model  \u001b[38;5;66;03m# 删除模型对象\u001b[39;00m\n\u001b[0;32m---> 82\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcuda\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mempty_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 释放未使用的显存\u001b[39;00m\n\u001b[1;32m     83\u001b[0m gc\u001b[38;5;241m.\u001b[39mcollect()  \u001b[38;5;66;03m# 强制进行垃圾回收\u001b[39;00m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGPU memory released.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/torch/cuda/memory.py:159\u001b[0m, in \u001b[0;36mempty_cache\u001b[0;34m()\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Releases all unoccupied cached memory currently held by the caching\u001b[39;00m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;124;03mallocator so that those can be used in other GPU application and visible in\u001b[39;00m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;124;03m`nvidia-smi`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;124;03m    more details about GPU memory management.\u001b[39;00m\n\u001b[1;32m    157\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    158\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_initialized():\n\u001b[0;32m--> 159\u001b[0m     \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cuda_emptyCache\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import whisper\n",
     "import gc\n",
@@ -214,7 +201,7 @@
     "    return model\n",
     "\n",
     "\n",
-    "def transcribe_audio_v3(model, audio_path, task=\"transcribe\", language=None,verbose=True):\n",
+    "def transcribe_audio_v3(model, audio_path, task=\"transcribe\", language=None,verbose=False):\n",
     "    \"\"\"\n",
     "    Transcribe audio using Whisper model (large-v3).\n",
     "    \"\"\"\n",
@@ -286,14 +273,6 @@
     "            gc.collect()  # 强制进行垃圾回收\n",
     "            print(\"GPU memory released.\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63c660ca-40a7-4611-9db6-26b83fb29efc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
